styles.css
* {
    font-family: Roboto, Arial, serif
}

body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.body {
    display: flex;
    flex-direction: column;
    flex: 1 1 0;
}

.header, .footer, .hero {
    background-color: #1F2937;
}

.header, .footer {
    height: 50px;
    display: flex;
    color: #F9FAF8
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0
}

.header a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.header {
    display: flex;
    justify-content: space-evenly;

}

.logo {
    font-size: 24px;
    font-weight: bold;
    
}

.links {
    display: flex;
    gap: 18px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: small
}

.hero {
    display: flex;
    flex: 1 1 0;
    justify-content: space-evenly;
    
}

.hero-main {
    font-size: 48px;
    color: #F9FAF8;

    width: 400px;
}

.hero-secondary {
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    width: 400px
}

.button {
    border-radius: 10px;
    font-weight: bold;
    color: #F9FAF8;
    background-color: #3882F6;
    padding: 8px 24px;
}

.image-placeholder {
    display: flex;
    height: 200px;
    width: 400px;
    flex-grow: 0;
    background-color: grey;
    justify-content: center;
    align-items: center;
}

.image-text {
    display: flex;
    font-size: small;
    color: #E5E7EB;
}


.body2 {
    display: flex;
    flex: 1 1 0;
}

.quotes {
    padding-left: 120px;
    padding-right: 120px;
    background-color: #E5E7EB;
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quotes-content {
    font-style: italic;
    font-size: 32px;
}

.quotes-author {
    font-weight: bold;
    align-self: flex-end;
}

.body4 {
    display: flex;
    flex: 1 1 0; 
}

